# chatgpt-telegram-bot

./: .gitignore  Dockerfile  app.py  cdk.json  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-dev.yml  deploy-prod.yml  prod-deploy.yml
engines/: Dockerfile  bard.py  bard_engine.py  bing.py  bing_gpt.py  bing_test.py  chat_gpt.py  claude.py  common_utils.py  conversation_history.py  copilot.py  dalle_img.py  deepl_tr.py  engine_interface.py  gemini.py  ideogram.py  ideogram_img.py  ideogram_result.py  ideogram_test.py  image_utils.py  llama2.py  mime_types.py  monsterapi.py  monsterapi_result.py  pyproject.toml  request_jobs.py  requirements.txt  user_context.py
lambda/: Conversation.py  EdgeGPT.py  bard_engine.py  bing.py  bing_gpt.py  bing_gpt_mock.py  bing_gpt_mock_data.json  chatbot.py  chatgpt.py  chatsonic.py  conversation_history.py  engine_interface.py  engines.py  help_command.py  markdown_exp.py  pyproject.toml  requirements.txt  results.py  user_config.py  utils.py  webhook.py
stacks/: chatbot_stack.py  chatgpt_bot_stack.py  database_stack.py  engines_stack.py  webhook_stack.py
tests/: test_bing_images.py  test_claude.py  test_ideogram.py
